# cpptraining

./: README.md  overview
.github/workflows/: build-in-docker.yaml
exercises/: CMakeLists.txt  README.md
exercises/compile_time_polymorphism/: ex1.cpp  ex2.cpp  ex3.cpp  main.cpp
exercises/concurrency/: ex1.cpp  ex2.cpp  main.cpp
exercises/containers/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  main.cpp
exercises/extra/: README.md
exercises/extra/compilertest/: CMakeLists.txt  Dockerfile  Hello.cpp  README.md  main.cpp
exercises/extra/concurrency/: ex1.cpp  ex2.cpp  main.cpp
exercises/global/: global.h
exercises/reference_semantics/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
exercises/referencesemantics/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  main.cpp
exercises/strong_types/: ex1.cpp  ex2.cpp
exercises/strongtypes/: ex1.cpp  ex2.cpp  ex3.cpp  main.cpp
exercises/value_semantics/: ex2.cpp  ex3.cpp  main.cpp
exercises/valuesemantics/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  main.cpp
slides/: 1.intro.pptx  1_intro.md  2.reference_semantics.pptx  2_compile_time_polymorphism.md  3.strongtypes.pptx  3_reference_semantics.md  4.valuesemantics.pptx  4_strong_types.md  5.containers.pptx  5_value_semantics.md  6.concurrency.pptx  6_containers.md  build.sh  style.css
slides/sioux-style/: style.css
